--- a/angular.json
+++ b/angular.json
@@ -32,10 +32,14 @@
             "styles": [
               "@angular/material/prebuilt-themes/purple-green.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.scss"
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "src/styles.scss",
+              "./node_modules/aos/dist/aos.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "./node_modules/aos/dist/aos.js", 
+              "./node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
