--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,9 @@
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "./node_modules/aos/dist/aos.js", 
-              "./node_modules/jquery/dist/jquery.min.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "/src/assets/js/custom.js"
+
             ]
           },
           "configurations": {
