--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "ngx-quicklink": "^0.4.2",
     "primeng": "^16.6.0",
     "rxjs": "~7.5.0",
+    "t-writer.js": "^1.0.4",
     "tslib": "^2.3.0",
+    "typewriter-effect": "^2.21.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
