--- a/angular.json
+++ b/angular.json
@@ -34,12 +34,12 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.scss",
-              "./node_modules/aos/dist/aos.css"
+              "node_modules/aos/dist/aos.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "./node_modules/aos/dist/aos.js", 
-              "./node_modules/jquery/dist/jquery.min.js",
+              "node_modules/aos/dist/aos.js", 
+              "node_modules/jquery/dist/jquery.min.js",
               "/src/assets/js/custom.js"
 
             ]
