--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@service-work/is-loading": "^6.2.3",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -36,6 +37,7 @@
     "@angular-devkit/build-angular": "^15.0.5",
     "@angular/cli": "~15.0.5",
     "@angular/compiler-cli": "^15.0.0",
+    "@types/aos": "^3.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
