--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
+    "materialize-css": "^1.0.0",
     "ngx-quicklink": "^0.4.2",
     "primeng": "^16.6.0",
     "rxjs": "~7.5.0",
