--- a/angular.json
+++ b/angular.json
@@ -19,6 +19,7 @@
           "options": {
             "outputPath": "dist/portafolio",
             "index": "src/index.html",
+            "allowedCommonJsDependencies": ["aos"],
             "main": "src/main.ts",
             "polyfills": [
               "zone.js"
@@ -34,7 +35,8 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.scss",
-              "node_modules/aos/dist/aos.css"
+              "node_modules/aos/dist/aos.css",
+              "node_modules/swiper/swiper-bundle.min.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
