subida al servidor de firebase

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.0.0",
@@ -24,7 +25,9 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "firebase": "^10.12.2",
     "jquery": "^3.7.1",
+    "lts": "^1.2.0",
     "materialize-css": "^1.0.0",
     "ngx-quicklink": "^0.4.2",
     "primeng": "^16.6.0",
